# playwright-god

./: .gitignore  .gitleaks.toml  .pr_body.md  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  example.env  package-lock.json  pyproject.toml  requirements.txt
.agents/plugins/: marketplace.json
.codex-plugin/: plugin.json
.github/: copilot-instructions.md
.github/workflows/: desktop.yml  playwright.yml  release-desktop.yml  secret-scan.yml
.selftest/: memory_map.json
.selftest/idx/: chroma.sqlite3
.specify/: feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.tmp_smoke/: plan.md
.tmp_ui_workflow/: credential-smoke.spec.ts  desktop-ui-generated.spec.ts
.tmp_ui_workflow/desktop_idx/: chroma.sqlite3
.tmp_ui_workflow/idx/: chroma.sqlite3  flow_graph.json
.tmp_ui_workflow/ui_idx/: chroma.sqlite3  memory_map.json
desktop/: .gitignore  QA.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
desktop/coverage/: base.css  clover.xml  coverage-final.json  index.html
desktop/e2e/: desktop-ui-generated.spec.ts
desktop/src/: App.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: artifacts.rs  cli_detect.rs  codegen_stream.rs  coverage_run.rs  inspect.rs  lib.rs  main.rs  pipeline.rs  recent_repos.rs  runs.rs  secrets.rs  settings.rs
playwright_god/: __init__.py  _secrets.py  auth_templates.py  chunker.py  cli.py  coverage.py  crawler.py  embedder.py  feature_map.py  flow_graph.py  generated_eval.py  generator.py  indexer.py  memory_map.py  refinement.py  repo_profile.py  retry.py  runner.py  runtime_bootstrap.py  scenario_ranker.py  spec_index.py  test_index.py  update_planner.py
playwright_god/_assets/: coverage_fixture.ts
playwright_god/extractors/: __init__.py  html.py  js_ts.py  python.py
scripts/: forbid-env-files.sh
specs/001-repo-memory-inference/: data-model.md  plan.md  quickstart.md  research.md  spec.md  (+1 more)
tests/: README.md  conftest.py
(+221 files in other folders)
