[package]
name = "playwright-god-desktop"
version = "0.1.0"
description = "Playwright God desktop shell"
authors = ["Playwright God contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "playwright_god_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
parking_lot = "0.12"
keyring = { version = "3", features = ["apple-native", "linux-native-sync-persistent", "sync-secret-service"] }
which = "6"

[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tempfile = "3"
